[tool.poetry]
name = "klaam"
version = "0.0.3"
description = "Arabic speech recognition, classification and text-to-speech."
license = "MIT"
authors = [
    "Zaid Alyafeai <alyafey22@gmail.com>",
    "mustafa0x"
]
readme = 'README.md'
homepage = "https://github.com/ARBML/klaam"
repository = "https://github.com/ARBML/klaam"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Framework :: IPython",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Natural Language :: Arabic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "3.7.13"
librosa = "^0.9.1"
ffmpeg = "^1.4"
torch = "^1.11.0"
torchaudio = "^0.11.0"
jupyter = "^1.0.0"
jiwer = "^2.3.0"
arabic-pronounce = "^0.2.5"
mishkal = "^0.4.1"
codernitydb3 = "^0.6.0"
pypinyin = "^0.46.0"
transformers = "^4.18.0"
datasets = "^2.1.0"
Unidecode = "^1.3.4"
inflect = "^5.5.2"
gdown = "^4.4.0"
pandas = "1.3"
tqdm = "^4.64.0"
numba = "^0.55.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pylint = "^2.13.7"
black = "^22.3.0"
mypy = "^0.950"
pytest-cov = "^3.0.0"
pre-commit = "^2.18.1"
pycln = "^1.3.2"
isort = "^5.10.1"
pre-commit-hooks = "^4.2.0"

[tool.mypy]
files = ["klaam"]
show_error_codes = true
pretty = true

[tool.pytest]
# log_cli = true
addopts = [
    # show summary of all tests that did not pass
    "-ra",
    # idk
    "-s",
    # Make tracebacks shorter
    "--tb=native",
    # enable all warnings
    "-Wd",
]
testpaths = ["test"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120 # override the default of 88

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
